# HRI

./: CMakeLists.txt  README.md  Template_with_voice_commands.py  rosgui.py
HRI_final_project_GUI/: Template.py  ros2ply.py
gui/: package.xml  setup.py
gui/gui/: rosgui.py
hri/: package.xml
hri/launch/: comp_world.launch.py  robot_state_publisher2.launch.py
launch/: cafeteria_world.launch.py
maptest/: setup.py
maptest/maptest/: mappub.py
src/HRI_2/: README.md
src/HRI_2/HRI_final_project_GUI/: ros2ply.py
src/gui/: package.xml  setup.py
src/gui/gui/: gui.py  rosgui.py
src/hri/: CMakeLists.txt  package.xml
src/hri/launch/: spawn_turtlebot32.launch.py
src/hri/src/: gui.py
src/maptest/: package.xml  setup.cfg
src/turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py
