<?xml version="1.0"?>
<package format="3">
  <name>gui</name>
  <version>0.0.1</version>
  <description>ROS2 GUI package for robot monitoring and control using PyQt5</description>
  <maintainer email="swarajmr@umd.edu">swaraj</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_python</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>PyQt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
